--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Crypto-currency wallet" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/images/" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/images/logo512.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   </head>
   <body>
